--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="/churras-maker/logo192.png" />
     <title>
-      Calculadora de Churras/title><script defer="defer"
-      src="/churras-maker/js/chunk-vendors.bd79e7e6.js"></script><script
-      defer="defer" src="/churras-maker/js/app.a4bf0e99.js"></script><link
-      href="/churras-maker/css/app.5cba5fa2.css" rel="stylesheet">
+      Calculadora de Churras
     </title>
+    <script defer="defer" src="/churras-maker/js/chunk-vendors.bd79e7e6.js"></script>
+    <script defer="defer" src="/churras-maker/js/app.a4bf0e99.js"></script>
+    <link href="/churras-maker/css/app.5cba5fa2.css" rel="stylesheet">
+   
   </head>
   <body>
     <noscript
