--- a/index.html
+++ b/index.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" href="/churras-maker/logo192.png" />
-    <title>
-      Calculadora de Churras
-    </title>
-    <script defer="defer" src="/churras-maker/js/chunk-vendors.bd79e7e6.js"></script>
-    <script defer="defer" src="/churras-maker/js/app.a4bf0e99.js"></script>
-    <link href="/churras-maker/css/app.5cba5fa2.css" rel="stylesheet">
-   
-  </head>
-  <body>
-    <noscript
-      ><strong
-        >We're sorry but churras-maker doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
-      ></noscript
-    >
-    <div id="app"></div>
-  </body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="icon" href="/logo192.png"/><title>Calculadora de Churras</title><script defer="defer" src="/js/chunk-vendors.07cbba3f.js"></script><script defer="defer" src="/js/app.8cec6e53.js"></script><link href="/css/app.245278e4.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but churras-maker doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
