--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" href="./logo192.png" />
-    <title>Calculador de Churras</title>
-    <script
-      defer="defer"
-      src="/churras-maker/js/chunk-vendors.bd79e7e6.js"
-    ></script>
-    <script defer="defer" src="/churras-maker/js/app.fbd23218.js"></script>
-    <link href="/churras-maker/css/app.30cfe00d.css" rel="stylesheet" />
+    <link rel="icon" href="/logo192.png" />
+    <title>Calculadora de Churras</title>
+    <script defer="defer" src="/js/chunk-vendors.07cbba3f.js"></script>
+    <script defer="defer" src="/js/app.8cec6e53.js"></script>
+    <link href="/css/app.245278e4.css" rel="stylesheet" />
   </head>
   <body>
     <noscript
